implement get store entry
