# internal/core/container/model.go
@@ -1,5 +1,7 @@
 package container
 
+import "time"
+
 type ServiceCreateModel struct {
 	Image   string
 	Command []string
@@ -18,4 +20,27 @@ type ServiceDeleteModel struct {
 
 type ServiceStopModel struct {
 	ContainerId string
+}
+
+type ForwardInfo struct {
+	HostPort      int    `json:"source"`
+	ContainerPort int    `json:"destination"`
+	Protocol      string `json:"protocol"`
+}
+
+type ContainerState struct {
+	ContainerId string   `json:"containerId"`
+	State       string   `json:"state"`
+	Pid         int      `json:"pid"`
+	Repository  string   `json:"imageRepository"`
+	Reference   string   `json:"imageReference"`
+	Command     []string `json:"command"`
+
+	Address  string        `json:"address"`
+	Forwards []ForwardInfo `json:"forwards"`
+
+	CreatingAt time.Time `json:"creatingAt"`
+	CreatedAt  time.Time `json:"createdAt"`
+	StartedAt  time.Time `json:"statedAt"`
+	StoppedAt  time.Time `json:"stoppedAt"`
 }
